fix bug cpu stack overflow

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ ol, ul {
     background: #fff;
     border: 1px solid #999;
     float: left;
-    font-size: 40px;
+    font-size: 20px;
     font-weight: bold;
     line-height: 34px;
     height: 34px;
@@ -55,7 +55,7 @@ ol, ul {
     background: #fff;
     border: 1px solid #999;
     float: left;
-    font-size: 34px;
+    font-size: 20px;
     font-weight: bold;
     line-height: 22px;
     height: 24px;
